[gd_scene load_steps=10 format=3 uid="uid://sdgkdvbs4bwh"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_jodvj"]
[ext_resource type="Texture2D" uid="uid://bfqloby5kk7ek" path="res://assets/sprites/background-day.png" id="2_orqpn"]
[ext_resource type="Texture2D" uid="uid://xjwg38ldh8io" path="res://assets/sprites/message.png" id="3_7kk8d"]
[ext_resource type="AudioStream" uid="uid://hsyh56xo1e66" path="res://assets/audio/8Bit Title Screen.mp3" id="4_ik1cb"]
[ext_resource type="PackedScene" uid="uid://md3g5y4ufxel" path="res://scenes/player.tscn" id="5_42bki"]
[ext_resource type="PackedScene" uid="uid://bpnx6ld5fdv2m" path="res://scenes/ground.tscn" id="6_umoug"]
[ext_resource type="Texture2D" uid="uid://tydlk4p00mbh" path="res://assets/sprites/gameover.png" id="7_hpulf"]
[ext_resource type="AudioStream" uid="uid://d1aw75nvfud7h" path="res://assets/audio/point.ogg" id="8_o67y0"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_yo31c"]
a = Vector2(-3, -44)
b = Vector2(1085, -44)

[node name="Game" type="Node2D"]
script = ExtResource("1_jodvj")

[node name="Player" parent="." instance=ExtResource("5_42bki")]
z_index = 2
position = Vector2(537, 1137)
collision_mask = 3

[node name="Background" type="TextureRect" parent="."]
offset_left = -5.0
offset_top = -151.0
offset_right = 1210.0
offset_bottom = 2009.0
texture = ExtResource("2_orqpn")
expand_mode = 3
stretch_mode = 4

[node name="ReadyMessage" type="TextureRect" parent="."]
z_index = 2
offset_left = 190.0
offset_top = 460.0
offset_right = 890.0
offset_bottom = 1460.0
texture = ExtResource("3_7kk8d")
stretch_mode = 4

[node name="GameoverMessage" type="TextureRect" parent="."]
visible = false
z_index = 2
offset_left = 40.0
offset_top = 556.0
offset_right = 1040.0
offset_bottom = 806.0
texture = ExtResource("7_hpulf")
stretch_mode = 4

[node name="Ground" parent="." instance=ExtResource("6_umoug")]
z_index = 1
position = Vector2(555, 1820)

[node name="Sky" type="RigidBody2D" parent="."]
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sky"]
shape = SubResource("SegmentShape2D_yo31c")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ik1cb")
volume_db = 1.0
autoplay = true
parameters/looping = true

[node name="GameOverInputDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_o67y0")
volume_db = 2.0

[connection signal="hit_ground" from="Player" to="." method="_on_player_hit_ground"]
[connection signal="hit_pipe" from="Player" to="." method="_on_player_hit_pipe"]
[connection signal="hit_sky" from="Player" to="." method="_on_player_hit_sky"]
[connection signal="timeout" from="GameOverInputDelayTimer" to="." method="_on_game_over_input_delay_timer_timeout"]
